--- a/frontend/src/styles/components/gamesdisplay.scss
+++ b/frontend/src/styles/components/gamesdisplay.scss
@@ -27,11 +27,11 @@
   height: 100%;
 
   .logo {
-    width: 75%;
+    height: 45px;
   }
 
   .top-games-container {
-    height: calc(100vh - 147px);
+    height: calc(100vh - 123px);
     overflow-x: hidden;
     overflow-y: auto;
 
