--- a/frontend/src/styles/components/landing.scss
+++ b/frontend/src/styles/components/landing.scss
@@ -1,5 +1,5 @@
 .landing {
-  background-image: url('../../images/background-metro.png');
+  background-image: url('../../images/background-metro-mobile.png');
   background-attachment: fixed; // This is essential for the parallax effect
   background-repeat: no-repeat;
   background-position: center;
@@ -19,13 +19,13 @@
 
   .hero {
     color: white;
-    font-size: 4rem;
+    font-size: 2.2rem;
     margin: 2rem 0;
   }
 }
 
 .landing-info-row {
-  margin: 100px 0;
+  margin: 75px 0;
 }
 
 .landing-info-box {
@@ -33,12 +33,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  border-radius: 8px;
-
+  align-items: center;
+  border-radius: $border-radius;
 
   h3 {
     font-size: 1rem;
-    margin: 1rem;
+    margin: 0.5rem;
+    font-weight: 400;
   }
 }
 
@@ -46,43 +47,45 @@
 .info-box-2,
 .info-box-3 {
   padding: $edge-padding;
-  border-radius: 8px;
-  max-width: 275px;
+  border-radius: $border-radius;
+  max-width: 375px;
 }
 
 .info-box-image {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 200px;
+  width: 75px;
+  height: 75px;
 }
 
 .info-box-1 {
-  background-color: $teal;
+  background-color: $secondary;
 
-  .info-box-image {
-    background-image: url('../../images/new-folder-dynamic-color.png');
+  .landing-info-box {
+    border: 2px solid $teal;
   }
 }
 
 .info-box-2 {
-  background-color: $warning;
+  background-color: $secondary;
 
-  .info-box-image {
-    background-image: url('../../images/chat-bubble-dynamic-color.png');
+  .landing-info-box {
+    border: 2px solid $warning;
   }
 }
 
 .info-box-3 {
-  background-color: $danger;
+  background-color: $secondary;
 
-  .info-box-image {
-    background-image: url('../../images/trophy-dynamic-color.png');
+  .landing-info-box {
+    border: 2px solid $danger;
   }
 }
 
 
 @media only screen and (min-width: $md) {
+  .landing {
+    background-image: url('../../images/background-metro.png');
+  }
+
   .landing-info {
     .hero {
       font-size: 5rem;
@@ -93,6 +96,11 @@
     h3 {
       font-size: 1.75rem;
     }
+  }
+
+  .info-box-image {
+    width: 150px;
+    height: 150px;
   }
 
   .info-box-1,
