--- a/frontend/src/styles/components/gamecards.scss
+++ b/frontend/src/styles/components/gamecards.scss
@@ -21,6 +21,7 @@
     border-bottom: 3px solid $teal;
     color: white;
     padding-top: 0;
+    transition: 0.4s;
 
     &::placeholder {
       color: white;
@@ -28,7 +29,9 @@
 
     &:focus {
       box-shadow: none;
+      border-bottom: 3px solid $warning;
     }
+
   }
 }
 
@@ -98,6 +101,12 @@ ul.react-paginate li.disabled a {
   justify-content: center;
   border-radius: 4px 4px 0 0;
   cursor: pointer;
+  transition: 0.3s;
+  border-bottom: 3px solid $primary;
+
+  &:hover {
+    border-bottom: 3px solid $warning;
+  }
 }
 
 .collect-add {
