--- a/frontend/src/styles/components/profile.scss
+++ b/frontend/src/styles/components/profile.scss
@@ -48,6 +48,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       color: white;
+      font-size: 2rem;
       font-weight: 200;
       max-width: 240px;
     }
