Added hover effects on pagination

--- a/frontend/src/styles/components/followinglist.scss
+++ b/frontend/src/styles/components/followinglist.scss
@@ -20,3 +20,30 @@
     width: 40px;
   }
 }
+
+.following-form {
+
+
+  .form-control {
+    font-weight: 300;
+    background-color: $primary;
+    border: 0px solid $primary;
+    border-radius: 0;
+    border-bottom: 3px solid $teal;
+    color: white;
+    padding-top: 0;
+    transition: 0.4s;
+    height: 40px;
+
+
+    &::placeholder {
+      color: white;
+    }
+
+    &:focus {
+      box-shadow: none;
+      border-bottom: 3px solid $warning;
+    }
+
+  }
+}
