Added styling for autofill

--- a/frontend/src/styles/components/gamecards.scss
+++ b/frontend/src/styles/components/gamecards.scss
@@ -188,6 +188,7 @@ ul.react-paginate li.disabled a {
 
 .placeholder-div-text {
   height: 20px;
+  width: 80%;
   opacity: 0.8;
   animation: fade 2s infinite;
 }
