--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -100,3 +100,18 @@ a {
 .btn {
   transition: 0.3s;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 2px solid $warning;
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0px 30px $secondary inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
