Added reset button function and restyled border radii

--- a/frontend/src/styles/components/chatmessage.scss
+++ b/frontend/src/styles/components/chatmessage.scss
@@ -1,7 +1,7 @@
 .chat-message {
   background-color: $primary;
   border: 1px solid $teal;
-  border-radius: $games-border-radius;
+  border-radius: $border-radius;
   display: flex;
   align-items: center;
   padding: 5px;
@@ -14,7 +14,7 @@
   img {
     width: 40px;
     height: 40px;
-    border-radius: $games-border-radius;
+    border-radius: $border-radius;
     margin-right: 5px;
   }
 
