--- a/frontend/src/styles/components/feature.scss
+++ b/frontend/src/styles/components/feature.scss
@@ -2,5 +2,5 @@
   min-height: 75px;
   background-color: $warning;
   margin: $edge-padding 0;
-  border-radius: $games-border-radius;
+  border-radius: $border-radius;
 }
