--- a/frontend/src/styles/components/chat.scss
+++ b/frontend/src/styles/components/chat.scss
@@ -128,7 +128,7 @@
     display: flex;
     flex-direction: column;
     background-color: $secondary;
-    border-radius: $games-border-radius;
+    border-radius: $border-radius;
     flex: 1;
     margin-top: $edge-padding;
   }
