--- a/frontend/src/styles/components/gamesdisplay.scss
+++ b/frontend/src/styles/components/gamesdisplay.scss
@@ -41,7 +41,7 @@
       font-size: 1rem;
       font-weight: 400;
       text-align: center;
-      margin: $inside-edge-padding 0;
+      margin: 10px 0;
       padding-bottom: $inside-edge-padding;
       border-bottom: 2px solid $teal;
     }
