--- a/frontend/src/styles/components/profile.scss
+++ b/frontend/src/styles/components/profile.scss
@@ -30,6 +30,11 @@
   .collection-button {
     width: 100%;
     border-radius: 0 0 8px 8px;
+
+    &:hover {
+      background-color: $secondary;
+      color: $warning
+    }
   }
 
   .profile-info {
