--- a/frontend/src/styles/components/gamesdisplay.scss
+++ b/frontend/src/styles/components/gamesdisplay.scss
@@ -58,6 +58,7 @@
     border-radius: $border-radius;
     width: 100%;
     padding: $inside-edge-padding;
+    border-bottom: 1px solid $warning;
 
     &:hover>img {
       transform: scale(1.03);
@@ -129,6 +130,10 @@
 }
 
 .center-col {
+  background-image: linear-gradient(rgba($secondary, 0.8), rgba($secondary, 0.8)), url('../../images/background-center.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   background-color: $secondary;
   border-radius: $border-radius;
   padding: $edge-padding $edge-padding 0 $edge-padding;
