--- a/frontend/src/styles/components/landing.scss
+++ b/frontend/src/styles/components/landing.scss
@@ -109,8 +109,9 @@
   }
 
   .info-box-image {
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
+    padding: 10px;
   }
 
   .info-box-1,
