--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -3,7 +3,7 @@ $navy: #00263A;
 $primary: $navy;
 $navy-light: #1b4358;
 $secondary: $navy-light;
-$teal: #3CDBC0;
+$teal: #50bdae;
 $info: $teal;
 $grey: #D8ECEA;
 $yellow: #F1BE48;
