Moved reset button

--- a/frontend/src/styles/components/gamecards.scss
+++ b/frontend/src/styles/components/gamecards.scss
@@ -5,6 +5,7 @@
     color: white;
     font-weight: 200;
     text-align: center;
+    height: 100vh;
   }
 }
 
@@ -13,6 +14,7 @@
 }
 
 .game-card-search {
+  text-align: center;
 
   .form-control {
     font-weight: 300;
@@ -36,6 +38,7 @@
     option {
       background-color: $secondary !important;
     }
+
   }
 
 }
